--- a/index.html
+++ b/index.html
@@ -1,47 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PRJ4 Assignment 3</title>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		
+	<title>Bootsraap</title>
 </head>
-
 <body>
-  <h1 id="header">Sustainability is the key to successs</h1>
-
-  <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur convallis, enim a viverra
-    mattis, eros nulla
-    ultricies tortor, a pretium lectus urna in eros. Duis rhoncus finibus tincidunt. Nulla et leo justo. Orci varius
-    natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent ultricies tempor varius. Aenean
-    rhoncus luctus rutrum. Nunc lobortis sodales nulla, id egestas metus faucibus a. Maecenas mi orci, iaculis venenatis
-    elit vel, semper ornare nisl. Pellentesque neque quam, ornare et blandit pharetra, mattis ut nisl. Curabitur dictum
-    tellus vitae est aliquam eleifend. Phasellus posuere, enim fermentum dignissim placerat, dui quam auctor mi, vel
-    dignissim nisi ipsum at arcu.</p>
-
-  <img src="images/sustainability.jpg" id="main-img" alt="World sustainability image">
-
-  <div class="container">
-    <h3>
-      Why sustainability is important?
-    </h3>
-
-    <ol>
-      <li>Reason 1</li>
-      <li>Reason 2</li>
-      <li>Reason 3</li>
-      <li>Reason 4</li>
-      <li>Reason 5</li>
-    </ol>
-  </div>
-
-  <p> Created by Dafne Ritchi, student of
-    <a href="https://www.buas.nl/">Breda University of Applied Sciences</a>
-  </p>
-
+	<h3>Bootsraap using</h3>
+	<h2>Hello world!</h2>
+	
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
-
 </html>
