--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	  <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js is in bootsrap file, then Bootstrap JS -->
     <script src="js/jquery-3.6.0.slim.min"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src=""></script>
