--- a/index.html
+++ b/index.html
@@ -66,21 +66,31 @@
 	  <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="images/header.png" class="d-block w-100" alt="...">
+        <img src="images/header.png" class="d-block w-100" alt="women doing yoga">
     </div>
     <div class="carousel-item">
-      <img src="images/header.png" class="d-block w-100" alt="...">
+      <img src="images/header.png" class="d-block w-100" alt="women doing yoga">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="images/header.png" class="d-block w-100" alt="women doing yoga">
     </div>
   </div>
 </div>
 
 	 </header>
-      
-
-      <!-- product star here>
+      <div class="container products">
+		  <div class="row">
+		      <div class="col-4">
+				  <p>products</p>
+			  </div>
+			  <div class="col-4">
+				  <p>products</p>
+			  </div>
+			  <div class="col-4">
+				  <p>products</p>
+			  </div>
+		  </div>
+	  </div>
       <!-- product end here>
 
       <!-- content shop star here>
