--- a/index.html
+++ b/index.html
@@ -79,15 +79,19 @@
 
 	 </header>
       <div class="container products">
+		  <h2>Products</h2>
 		  <div class="row">
 		      <div class="col-4">
-				  <p>products</p>
+				  <img src="images/oil.jpg" class="img-fluid"  alt="essential oil">
+				  <p>Levander essential oil</p>
 			  </div>
 			  <div class="col-4">
-				  <p>products</p>
+				  <img src="images/crystal.jpg" class="img-fluid" alt="chrystal">
+				  <p>Purple chrystal</p>
 			  </div>
 			  <div class="col-4">
-				  <p>products</p>
+				  <img src="images/pure.jpg" class="img-fluid" alt="essential oil">
+				  <p>Essential oil</p>
 			  </div>
 		  </div>
 	  </div>
