--- a/index.html
+++ b/index.html
@@ -95,8 +95,13 @@
 			  </div>
 		  </div>
 	  </div>
-      <!-- product end here>
-
+       
+      <div class="container products">
+		  <p></p>
+      </div> 
+	  
+	  <div class="container-fluid">
+	  </div>
       <!-- content shop star here>
       <!--content shop end here>
 
