--- a/index.html
+++ b/index.html
@@ -81,27 +81,22 @@
       <div class="container products">
 		  <h2>Products</h2>
 		  <div class="row">
-		      <div class="col-4">
+		      <div class="col-md-4">
 				  <img src="images/oil.jpg" class="img-fluid"  alt="essential oil">
 				  <p>Levander essential oil</p>
 			  </div>
-			  <div class="col-4">
+			  <div class="col-md-4">
 				  <img src="images/crystal.jpg" class="img-fluid" alt="chrystal">
 				  <p>Purple chrystal</p>
 			  </div>
-			  <div class="col-4">
+			  <div class="col-md-4">
 				  <img src="images/pure.jpg" class="img-fluid" alt="essential oil">
 				  <p>Essential oil</p>
 			  </div>
 		  </div>
 	  </div>
        
-      <div class="container products">
-		  <p></p>
-      </div> 
-	  
-	  <div class="container-fluid">
-	  </div>
+      
       <!-- content shop star here>
       <!--content shop end here>
 
