--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a class="nav-link" href="193130.html">About us <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Testimonials</a>
+        <a class="nav-link" href="193130.html">Testimonials</a>
       </li>
 		<li> <a class="nav-link" href="#">Blog</a>
 		</li>
