--- a/193130.html
+++ b/193130.html
@@ -33,10 +33,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">About us <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">About us <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Testimonials</a>
+        <a class="nav-link" href="#">Testimonials</a>
       </li>
 		<li> <a class="nav-link" href="#">Blog</a>
 		</li>
